@@ -1,6 +1,6 @@
 DIST lucene-2.3.1-src.tar.gz 4597493 RMD160 40d8c78e841a65948615ccdbfbde5c4373691e46 SHA1 b1d5b54d5a072f7b166f98cadb7541b47e10bcd5 SHA256 84ddee3a667242917c8117d9e273d9e81ef7f4015c69a7758f12b8018054e646
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
 EBUILD lucene-regex-2.3.1.ebuild 342 RMD160 1e11540bfb932dd5d1dbf2e9e8d136b3dfa7e43c SHA1 53e2fb85b6a0e1a0d83ddef9acb1386dc6979922 SHA256 8fd13758d264b34c1fee1f6bbe349b11f2a59353192288562a244bcbdce6848c
-EBUILD lucene-regex-2.4.0.ebuild 242 RMD160 ce025e3d4068bbce3757d8889c4322e4e1a789b8 SHA1 296da6e6948e431f36c8265f884f5132d178bad6 SHA256 bf60f6f8dabfca610845a0b3eac5ed6108f48dfc406212ee5862c2a24d8bd31f
-MISC ChangeLog 446 RMD160 5c399137bf6ae80ebc6b8a335837aee04911e2fc SHA1 17b1e223c03a622882d1a5d31cdbfa770a4bb7c6 SHA256 3959aac063189ca8042fc39468abadd355eba916e6a3745de3533c2dc7e2e931
+EBUILD lucene-regex-2.4.0.ebuild 362 RMD160 27fb09a1fb2471cf4bf5b71d12a248407a3fa179 SHA1 2717809b03a06f4118a9bf9384721ee5ae0f53ce SHA256 cf79f577d05c4ca69e907abec9a13fc7df95ee036e7c51ecfef66ba1547901ef
+MISC ChangeLog 562 RMD160 6f1ca92072cab084c7f2e52cdf82a363b7f04a2d SHA1 357b21892e1fe82f6e8367b94b6e29f7d4ef54d6 SHA256 c028efbe1a60353eb4564348ead68a483e81fd9b7e6bb3221a37f30994d13e9e
 MISC metadata.xml 238 RMD160 783116138e0aef186a6875b10240db7f963e8179 SHA1 a8c4236153d54bb18fa1129d760d9cafeffaef66 SHA256 f66bec168dd93fbc6304fe7353bb339a6d86a62216756f23e610854acf9a6cd9
