@@ -9,3 +9,8 @@ DESCRIPTION="Queries addon for lucene"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 DOCS="readme.txt"
+
+DEPEND="=dev-java/jakarta-regexp-1.4*"
+RDEPEND="=dev-java/jakarta-regexp-1.4*"
+
+LUCENE_EXTRA_DEPS="jakarta-regexp-1.4"
